navigation z-index correction

--- a/wp-content/themes/carnes-crossroads-2015/scss/_navigation.scss
+++ b/wp-content/themes/carnes-crossroads-2015/scss/_navigation.scss
@@ -8,7 +8,7 @@
     left: 0;
     padding: 17px 0 0 0;
     background: url(./img/pattern-green.jpg) repeat center center;
-    z-index: 999;
+    z-index: 9999;
     @include box-shadow(0 3px 8px rgba($black, 0.25));
     @include transition(0.3s all);
 
